[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Sofa/SofaSpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Player/States/Jump.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Utils/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://Player/States/Jump_grup.gd" type="Script" id=7]
[ext_resource path="res://Player/States/Jump_top.gd" type="Script" id=8]
[ext_resource path="res://Player/States/Jump_fall.gd" type="Script" id=9]
[ext_resource path="res://Player/States/Jump_glide.gd" type="Script" id=10]

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Jump_fall"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 114, 115 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Jump_glide"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump_simple"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Jump_top"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 133 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Land"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 95, 96 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 57, 58, 59, 60, 61, 62 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 8 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 3 )

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Jump_fall = SubResource( 10 )
anims/Jump_glide = SubResource( 7 )
anims/Jump_simple = SubResource( 8 )
anims/Jump_top = SubResource( 11 )
anims/Land = SubResource( 9 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump_grup" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Jump_top" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 8 )

[node name="Jump" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 2 )

[node name="Jump_fall" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 9 )

[node name="Jump_glide" type="Node" parent="StateMachine/Jump_grup"]
script = ExtResource( 10 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
position = Vector2( 8, -16 )
texture = ExtResource( 1 )
hframes = 19
vframes = 8
frame = 76

[node name="GroundRay1" type="RayCast2D" parent="Body"]
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="GroundRay2" type="RayCast2D" parent="Body"]
position = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3

[node name="GroundRay3" type="RayCast2D" parent="Body"]
position = Vector2( 4, 1 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 3
